2006-04-11  Brian Warner  <warner@lothar.com>

	* all: fix a number of incorrect names and missing imports, thanks
	to Anthony Baxter for the patch.
	* buildbot/status/html.py (WaterfallStatusResource.statusToHTML): 
	remove unused buggy method.
	* buildbot/status/builder.py (BuildStatus.saveYourself): rmtree
	comes from shutil, not "shutils"
	* buildbot/process/step.py (TreeSize.evaluateCommand): fix bad name
	(Arch.checkSlaveVersion): same
	* buildbot/process/step_twisted.py (Trial.commandComplete): same, in
	some disabled code
	* buildbot/process/step_twisted2.py: add some missing imports
	* buildbot/twcompat.py (_deferGenerator): fix cut-and-paste error,
	this code used to live in twisted.internet.defer

2006-04-10  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py (Mercurial): add Mercurial support
	* buildbot/slave/commands.py (Mercurial): same
	* buildbot/scripts/tryclient.py (MercurialExtractor): same
	* buildbot/test/test_vc.py (Mercurial): same, checkout over HTTP is
	not yet tested, but 'try' support *is* covered
	* docs/buildbot.texinfo (Mercurial): document it

	* buildbot/process/step.py (LoggedRemoteCommand.remoteUpdate): add
	some debugging messages (turned off)
	* buildbot/test/test_vc.py: improve debug messages

2006-04-07  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py (which): define our own which() in case
	we can't import twisted.python.procutils, because procutils doesn't
	exist in Twisted-1.3

	* docs/buildbot.texinfo (Interlocks): fix some typos, mention use
	of SlaveLocks for performance tests

	* docs/examples/twisted_master.cfg: update to match current usage

	* buildbot/changes/p4poller.py (P4Source): add new arguments:
	password, p4 binary, pollinterval, maximum history to check.
	Patch from an anonymous sf.net contributor, SF#1219384.
	* buildbot/process/step.py (P4Sync.__init__): add username,
	password, and client arguments.
	* buildbot/slave/commands.py (P4Sync): same
